--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,35 +2,63 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/whatsapp"
     android:layout_width="match_parent"
+
     android:layout_height="match_parent"
+    android:background="#8DB6AF"
     tools:context=".MainActivity">
 
 
-
-    <EditText
-        android:id="@+id/editTextPhone"
-        android:layout_width="wrap_content"
+    <TextView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ems="16"
-        android:hint="Ingrese el numero de celular"
-        android:inputType="phone"
-        android:rotationX="-8"
-        android:maxLength="8"
-        app:layout_constraintBottom_toTopOf="@+id/button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:background="@drawable/ic_launcher_background"
+        android:gravity="center"
+        android:text="HELLOss"
 
+        android:textColor="@color/black"
+        android:textSize="35dp" />
 
     <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@color/cardview_dark_background"
         android:text="Button"
-        app:layout_constraintTop_toBottomOf="@+id/editTextPhone"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintHorizontal_bias="0.546"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextPhone"
+        app:layout_constraintVertical_bias="0.165" />
+
+    <TextView
+        android:layout_width="32dp"
+        android:layout_height="0dp"
+        android:layout_marginEnd="40dp"
+        android:text="+691"
+        android:textSize="19dp"
+        app:layout_constraintEnd_toStartOf="@+id/editTextPhone"
+        tools:layout_editor_absoluteY="518dp" />
+
+    <EditText
+        android:id="@+id/editTextPhone"
+        android:layout_width="291dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="272dp"
+        android:ems="16"
+        android:hint="numero de celular "
+        android:inputType="phone"
+        android:maxLength="8"
+        android:visibility="visible"
+        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.5"
+        tools:visibility="visible" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
